--- a/index.html
+++ b/index.html
@@ -78,9 +78,20 @@
  
 	</section>
 	<div class="content_white">
-  <h2>Welcome to IMPERIAL FREIGHT LIMITED!</h2>
-  <p>Imperial Freight Ltd.(IFL) founded in 2001, aims to be leading logistics service provider in Bangladesh. With the consistent efforts and creativity from all experienced staffs, IFL steadily developed and expanded services in all freight management and logistics sectors.</p>
-</div>
+  			<h2><strong>Welcome to IMPERIAL FREIGHT LIMITED!</strong></h2>
+  			<div class="about">	
+				<div class="row"> 
+					<div class="col-md-1"></div>
+
+					<div class="col-md-10">
+						  <p>Imperial Freight Ltd.(IFL) founded in 2001, aims to be leading logistics service provider in Bangladesh. With the consistent efforts and creativity from all experienced staffs, IFL steadily developed and expanded services in all freight management and logistics sectors.</p>
+					</div>
+
+					<div class="col-md-1"></div>
+
+				</div>
+			</div>
+	</div>
 
 
 <div class="content_white2">
@@ -94,22 +105,22 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4 feature_grid1"> <i class="fa fa-anchor fa-3x"></i>
-        <h3><a href="#">Sea Freight</a></h3>
+        <h3><a href="seafreight.html">Sea Freight</a></h3>
         <p>With a complete range of Sea Freight Services, we leverage volumes smartly to deliver competitive sea transportation in every major trade lanes.</p>
-        <a href="#" class="feature_btn">Read More</a> </div>
+        <a href="seafreight.html" class="feature_btn">Read More</a> </div>
       <div class="col-md-4 feature_grid1"> <i class="fa fa-plane fa-3x"></i>
-        <h3><a href="#">Air Freight</a></h3>
+        <h3><a href="airfreight.html">Air Freight</a></h3>
         <p> During a long time we have built strong relationships with key airline staff and have developed excellent buying power ability.</p>
-        <a href="#" class="feature_btn">Read More</a> </div>
+        <a href="airfreight.html" class="feature_btn">Read More</a> </div>
       <div class="col-md-4 feature_grid1"> <i class="fa fa-truck fa-3x"></i>
-        <h3><a href="#">ROAD FREIGHT</a></h3>
+        <h3><a href="roadfreight.html">ROAD FREIGHT</a></h3>
         <p>With a safe, innovative fleet and well-established delivery networks across the country, we are able to transport all kinds of freight by road.</p>
-        <a href="#" class="feature_btn">Read More</a> </div>
+        <a href="roadfreight" class="feature_btn">Read More</a> </div>
       
     </div>
 
     <div class="content_white2">
- 		<a href="#" class="feature_btn2">Click Here to find More Services</a>
+ 		<a href="services.html" class="feature_btn2">Click Here to find More Services</a>
 	</div>
 
   </div>
@@ -192,7 +203,9 @@
 	</div>
 	
 	</section>
-	
+
+	<!-- FOOTER STARTS -->
+
 	<footer>
 	<div class="container">
 		<div class="row">
@@ -207,16 +220,16 @@
 				<div class="widget">
 					<h5 class="widgetheading">Quick Links</h5>
 					<ul class="link-list">
-						<li><a href="#">Air Freight</a></li>
-						<li><a href="#">Sea Freight</a></li>
-						<li><a href="#">Road Freight</a></li>
-						<li><a href="#">Combined Sea Air</a></li>
-						<li><a href="#">Consolidation</a></li>
-						<li><a href="#">Customs Clearance</a></li>
-						<li><a href="#">Warehousing</a></li>
-						<li><a href="#">Distribution</a></li>
-						<li><a href="#">Garments On Hanger</a></li>
-						<li><a href="#">Aircraft Charter Service</a></li>
+						<li><a href="airfreight.html">Air Freight</a></li>
+						<li><a href="seafreight.html">Sea Freight</a></li>
+						<li><a href="roadfreight.html">Road Freight</a></li>
+						<li><a href="combined.html">Combined Sea Air</a></li>
+						<li><a href="consolidation.html">Consolidation</a></li>
+						<li><a href="customclearance.html">Customs Clearance</a></li>
+						<li><a href="warehousing.html">Warehousing</a></li>
+						<li><a href="distribution.html">Distribution</a></li>
+						<li><a href="goh.html">Garments On Hanger</a></li>
+						<li><a href="acs.html">Aircraft Charter Service</a></li>
 					</ul>
 				</div>
 			</div>
