--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									 </div>
 									 
 								  </div>
-								  <a href="#" class="feature_btn">Read More</a>
+								  <a href="about.html" class="feature_btn">Read More</a>
 								</div>
 								<!-- Accordion ends -->
 								
